--- a/pug/includes/encabezado.pug
+++ b/pug/includes/encabezado.pug
@@ -27,11 +27,11 @@ section.welcome
                         a(href="#") Contacto
 
                 .logins
-                    a(href="https://www.swpro.com.co/login/", target="_blank").btn.btn-block.btn-secondary.btnIngresar Ingresar
-                    a(href="http://cyrius.herokuapp.com/", target="_blank").btn.btn-block.btn-secondary.btnCyrius Cyrius
+                    a(href="https://www.swpro.com.co/login/", target="_blank").btn.btn-block.btn-secondary.btnAzul Ingresar
+                    a(href="http://cyrius.herokuapp.com/", target="_blank").btn.btn-block.btn-secondary.btnVerdeMenta Cyrius
     
     .welcome-text.text-xs-center
         .container
-            h2.display-4 Bienvenidos a Swpro
+            h1.display-4 Bienvenidos a Swpro
 
             p Desarrollo de software a la medida de su empresa
