--- a/pug/index.pug
+++ b/pug/index.pug
@@ -19,5 +19,6 @@ head
     title Swpro | Desarrollo de software
 body
     include includes/encabezado.pug
+    include includes/loquehacemos.pug
     include includes/lorem.pug
     include includes/footer.pug
