--- a/stylus/includes/header.styl
+++ b/stylus/includes/header.styl
@@ -84,21 +84,22 @@
             li.active
                 a
                     color verdeMenta
-.logins
-    
-    .btn
-        border 0
-        color #fff
-        transition all .5s ease
 
-    a.btnIngresar
-        background azul
+.btn
+    border 0
+    color #fff
+    transition all .5s ease
 
-        &:hover
-            background darken(azul, 10)
+.btnAzul
+    background azul
 
-    a.btnCyrius
-        background verdeMenta
+    &:hover
+        background darken(azul, 10)
+        color gris_1
 
-        &:hover
-            background darken(verdeMenta, 10)
+.btnVerdeMenta
+    background verdeMenta
+
+    &:hover
+        background darken(verdeMenta, 10)
+        color gris_1
