--- a/stylus/estilos.styl
+++ b/stylus/estilos.styl
@@ -1,6 +1,8 @@
 @import 'includes/variables.styl'
 
+
 body
     font-family 'Roboto', sans-serif
 
 @import 'includes/header.styl'
+@import 'includes/services.styl'
