Seccion workflow y ultimos proyectos maquetada y estilizada

--- a/app/css/estilos.css
+++ b/app/css/estilos.css
@@ -145,9 +145,66 @@ body {
   background: #187a71;
   color: #eeeeef;
 }
+.services {
+  margin-bottom: 1rem;
+}
 .services .wedo .servicio {
   margin: 1rem;
 }
 .services .wedo .servicio img {
   max-width: 40%;
+}
+.workflow {
+  background: #222c37;
+  color: #fff;
+  padding: 1rem;
+  text-align: center;
+}
+.workflow img {
+  margin-bottom: 0.5rem;
+  max-width: 60px;
+}
+section.latestWorks {
+  background: #eeeeef;
+}
+section.latestWorks h1 {
+  padding: 1rem;
+}
+section.latestWorks a {
+  text-decoration: none;
+}
+section.latestWorks a h4 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+  padding-top: 1rem;
+  color: #2b2b2b;
+}
+section.latestWorks .container {
+  padding-left: 0;
+  padding-right: 0;
+}
+section.latestWorks .owl-nav {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0.3rem 0;
+}
+section.latestWorks .owl-prev,
+section.latestWorks .owl-next {
+  font-size: 3rem;
+  margin: 0 0.5rem;
+  color: #2b2b2b;
+  -webkit-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+section.latestWorks .owl-prev:hover,
+section.latestWorks .owl-next:hover {
+  color: #a7a7a6;
 }
