--- a/stylus/estilos.styl
+++ b/stylus/estilos.styl
@@ -6,3 +6,5 @@ body
 
 @import 'includes/header.styl'
 @import 'includes/services.styl'
+@import 'includes/workflow.styl'
+@import 'includes/latestWorks.styl'
