--- a/pug/includes/footer.pug
+++ b/pug/includes/footer.pug
@@ -1,3 +1,5 @@
 footer
     script(src="js/jquery-3.2.1.min.js")
     script(src="js/bootstrap.min.js")
+    script(src="js/owl.carousel.min.js")
+    script(src="js/myScript.js")
