Seccion blog y formulario de contacto maquetado v1

--- a/pug/includes/latestWorks.pug
+++ b/pug/includes/latestWorks.pug
@@ -27,3 +27,7 @@ section.latestWorks
                 
                 img(src="http://lorempixel.com/300/200/", alt="")
                 h4  Proyecto 5
+
+        .row
+                .col-xs-12
+                    a(href="#").btn.btn-block.btn-secondary.btnAzul Ver todos los proyectos
