--- a/pug/index.pug
+++ b/pug/index.pug
@@ -28,4 +28,5 @@ body
     include includes/loquehacemos.pug
     include includes/workflow.pug
     include includes/latestWorks.pug
+    include includes/blog_contact.pug
     include includes/footer.pug
