--- a/stylus/estilos.styl
+++ b/stylus/estilos.styl
@@ -8,3 +8,4 @@ body
 @import 'includes/services.styl'
 @import 'includes/workflow.styl'
 @import 'includes/latestWorks.styl'
+@import 'includes/blog_contact.styl'
