--- a/app/css/estilos.css
+++ b/app/css/estilos.css
@@ -208,3 +208,31 @@ section.latestWorks .owl-prev:hover,
 section.latestWorks .owl-next:hover {
   color: #a7a7a6;
 }
+.blog__contact .container h2.headBlogContact {
+  border-bottom: 1px solid #a7a7a6;
+  padding: 1rem;
+}
+.blog__contact .container a {
+  text-decoration: none;
+  color: #2b2b2b;
+}
+.blog__contact .container a article {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 1rem;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-align-content: center;
+      -ms-flex-line-pack: center;
+          align-content: center;
+}
+.blog__contact .container a article .detailPost {
+  margin-left: 1rem;
+}
+.blog__contact .container a article .detailPost .dateBlog {
+  font-weight: bold;
+}
