--- a/stylus/estilos.styl
+++ b/stylus/estilos.styl
@@ -9,3 +9,4 @@ body
 @import 'includes/workflow.styl'
 @import 'includes/latestWorks.styl'
 @import 'includes/blog_contact.styl'
+@import 'includes/footer.styl'
