--- a/pug/includes/footer.pug
+++ b/pug/includes/footer.pug
@@ -22,9 +22,18 @@ footer
                         input(type="text", placeholder="Ingresa tu correo electrónico", title="Tu correo para suscribirte")
                         input(type="submit", value="Suscribirse")
 
-
-                
-
+.credits
+    .container
+        .creditsContainer
+            p.creditsInfo &copy; Swpro - Pitalito, Huila, CO.(+57) 312 597 8691 - 300 251 8971            
+            
+            .socialLinks
+                a(href="https://www.facebook.com/swpro.co", target="_blank")
+                    i.fa.fa-facebook-official
+                a(href="https://github.com/swprosoft", target="_blank")
+                    i.fa.fa-github-square
+                a(href="https://swproteam.slack.com/", target="_blank")
+                    i.fa.fa-slack
 
 script(src="js/jquery-3.2.1.min.js")
 script(src="js/bootstrap.min.js")
