--- a/stylus/includes/footer.styl
+++ b/stylus/includes/footer.styl
@@ -44,3 +44,21 @@ footer
             padding .7rem
             flex 1 1 auto
             margin 0
+
+.credits
+    padding: 1rem 0 1rem 0
+
+    .creditsContainer
+        display flex
+        justify-content space-between
+        align-items flex-end
+
+        .socialLinks
+            font-size 2rem
+
+            i
+                color gris_2
+                padding .5rem
+
+                &:hover
+                    color verdeMenta
