--- a/app/css/estilos.css
+++ b/app/css/estilos.css
@@ -293,3 +293,30 @@ footer .suscribeFieldContainer input[type="submit"] {
           flex: 1 1 auto;
   margin: 0;
 }
+.credits {
+  padding: 1rem 0 1rem 0;
+}
+.credits .creditsContainer {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+  -webkit-align-items: flex-end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+.credits .creditsContainer .socialLinks {
+  font-size: 2rem;
+}
+.credits .creditsContainer .socialLinks i {
+  color: #a7a7a6;
+  padding: 0.5rem;
+}
+.credits .creditsContainer .socialLinks i:hover {
+  color: #20a599;
+}
