Falta ajustar el menu...Estilizado y maquetado v md

--- a/app/css/includes/services.css
+++ b/app/css/includes/services.css
@@ -1,9 +1,1 @@
-.services {
-  margin-bottom: 1rem;
-}
-.services .wedo .servicio {
-  margin: 1rem;
-}
-.services .wedo .servicio img {
-  max-width: 40%;
-}
+.services{margin-bottom:1rem}.services .wedo{padding:1.5rem}.services .wedo .servicio{margin:1rem}.services .wedo .servicio img{max-width:40%}
