--- a/pug/includes/blog_contact.pug
+++ b/pug/includes/blog_contact.pug
@@ -27,7 +27,7 @@ section.blog__contact
                                 p.dateBlog JUN 16, 2017
                                 p.resumeExcerpt Instalar Sublime Text 3 en Ubuntu
 
-                    a(href="#").btn.btn-block.btn-secondary.btnAzul Ver todas las entradas del blog
+                    a(href="#").btn.btn-block.btn-secondary.btnAzul.text-white Ver todas las entradas del blog
 
             .col-xs-12.col-md-5.offset-md-1
                 h2.text-xs-center.headBlogContact Contáctanos
