--- a/pug/includes/latestWorks.pug
+++ b/pug/includes/latestWorks.pug
@@ -29,5 +29,5 @@ section.latestWorks
                 h4  Proyecto 5
 
         .row
-                .col-xs-12
+                .col-xs-12.col-md-4.offset-md-4
                     a(href="#").btn.btn-block.btn-secondary.btnAzul Ver todos los proyectos
