--- a/pug/includes/workflow.pug
+++ b/pug/includes/workflow.pug
@@ -1,22 +1,26 @@
 section.workflow
-    .container-fluid
-        h1.text-xs-center Nuestro Workflow
+    h1.text-xs-center Nuestro Workflow
+
+    .container-fluid#contenedorWorkflow
 
         .row
-            .col-xs
-                img(src="images/workflow_1.svg", alt="")
+
+            .col            
+                img(src="images/workflow_1.png", alt="")
                 p Análisis
-            .col-xs
-                img(src="images/workflow_2.svg", alt="")
+
+            .col
+                img(src="images/workflow_2.png", alt="")
                 p Diseño
-        .row
-            .col-xs
-                img(src="images/workflow_3.svg", alt="")
+
+            .col
+                img(src="images/workflow_3.png", alt="")
                 p Construcción
-            .col-xs
-                img(src="images/workflow_4.svg", alt="")
+
+            .col
+                img(src="images/workflow_4.png", alt="")
                 p Lanzamiento
-        .row
-            .col-xs
-                img(src="images/workflow_5.svg", alt="")
+
+            .col
+                img(src="images/workflow_5.png", alt="")
                 p Soporte
