--- a/stylus/estilos.styl
+++ b/stylus/estilos.styl
@@ -1,8 +1,13 @@
 @import 'includes/variables.styl'
 
+html
+    font-size 16px
 
 body
     font-family 'Roboto', sans-serif
+
+&::selection
+    background yellow
 
 @import 'includes/header.styl'
 @import 'includes/services.styl'
