--- a/app/css/estilos.css
+++ b/app/css/estilos.css
@@ -1,322 +1,1 @@
-body {
-  font-family: 'Roboto', sans-serif;
-}
-.welcome {
-  background: url("../images/bgFront.jpg") no-repeat center top;
-  -webkit-background-size: cover;
-          background-size: cover;
-  color: #fff;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  height: 100vh;
-}
-.welcome .welcome-text {
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 1 auto;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
-}
-.welcome .banner {
-  color: #fff;
-  padding: 1rem 0;
-}
-.welcome .banner .container {
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
-}
-.welcome .banner .container .logo img {
-  width: 175px;
-}
-.welcome .btnMenu,
-.welcome .btnSearch {
-  background: transparent;
-  border: 0;
-  color: #fff;
-  font-size: 2rem;
-  margin: 0;
-  padding: 0 0.5rem;
-}
-.welcome .btnMenu:focus,
-.welcome .btnSearch:focus {
-  outline: 0;
-}
-.welcome .btnSearch {
-  margin-left: auto;
-  margin-right: 0.8rem;
-}
-.welcome #blockSearch {
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 1 100%;
-      -ms-flex: 1 1 100%;
-          flex: 1 1 100%;
-}
-.welcome .blockSearchContainer {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  height: 3rem;
-  margin: 1rem 0;
-}
-.welcome .blockSearchContainer input[type="text"] {
-  border: 0;
-  -webkit-border-radius: 5px 0 0 5px;
-          border-radius: 5px 0 0 5px;
-  padding: 1rem;
-}
-.welcome .blockSearchContainer input[type="submit"] {
-  background: #20a599;
-  border: 0;
-  -webkit-border-radius: 0 5px 5px 0;
-          border-radius: 0 5px 5px 0;
-  color: #fff;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 1 auto;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
-}
-.welcome nav#mainMenuContainer {
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 1 100%;
-      -ms-flex: 1 1 100%;
-          flex: 1 1 100%;
-}
-.welcome nav#mainMenuContainer ul {
-  list-style: none;
-  margin: 1rem 0 0 0;
-  padding: 0;
-}
-.welcome nav#mainMenuContainer ul a {
-  border-top: 1px solid #a7a7a6;
-  color: #eeeeef;
-  display: block;
-  padding: 0.8rem 0;
-  text-align: center;
-  text-decoration: none;
-}
-.welcome nav#mainMenuContainer ul a:hover {
-  color: #20a599;
-}
-.welcome nav#mainMenuContainer ul li.active a {
-  color: #20a599;
-}
-.btn {
-  border: 0;
-  color: #fff;
-  -webkit-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
-.btnAzul {
-  background: #1bb7d0;
-}
-.btnAzul:hover {
-  background: #158fa3;
-  color: #eeeeef;
-}
-.btnVerdeMenta {
-  background: #20a599;
-}
-.btnVerdeMenta:hover {
-  background: #187a71;
-  color: #eeeeef;
-}
-.services {
-  margin-bottom: 1rem;
-}
-.services .wedo .servicio {
-  margin: 1rem;
-}
-.services .wedo .servicio img {
-  max-width: 40%;
-}
-.workflow {
-  background: #222c37;
-  color: #fff;
-  padding: 1rem;
-  text-align: center;
-}
-.workflow img {
-  margin-bottom: 0.5rem;
-  max-width: 60px;
-}
-section.latestWorks {
-  background: #eeeeef;
-}
-section.latestWorks h1 {
-  padding: 1rem;
-}
-section.latestWorks a {
-  text-decoration: none;
-}
-section.latestWorks a h4 {
-  font-size: 1.5rem;
-  font-weight: bold;
-  text-align: center;
-  padding-top: 1rem;
-  color: #2b2b2b;
-}
-section.latestWorks .container {
-  padding-left: 0;
-  padding-right: 0;
-}
-section.latestWorks .owl-nav {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin: 0.3rem 0;
-}
-section.latestWorks .owl-prev,
-section.latestWorks .owl-next {
-  font-size: 3rem;
-  margin: 0 0.5rem;
-  color: #2b2b2b;
-  -webkit-transition: all 0.2s ease;
-  -o-transition: all 0.2s ease;
-  transition: all 0.2s ease;
-}
-section.latestWorks .owl-prev:hover,
-section.latestWorks .owl-next:hover {
-  color: #a7a7a6;
-}
-.blog__contact .container h2.headBlogContact {
-  border-bottom: 1px solid #a7a7a6;
-  padding: 1rem;
-}
-.blog__contact .container a {
-  text-decoration: none;
-  color: #2b2b2b;
-}
-.blog__contact .container a article {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  margin-bottom: 1rem;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-align-content: center;
-      -ms-flex-line-pack: center;
-          align-content: center;
-}
-.blog__contact .container a article .detailPost {
-  margin-left: 1rem;
-}
-.blog__contact .container a article .detailPost .dateBlog {
-  font-weight: bold;
-}
-footer {
-  background: #222c37;
-  padding: 1rem;
-  color: #fff;
-}
-footer img {
-  max-width: 30%;
-  margin: 1rem 0;
-}
-footer .listfooterMenu {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  list-style: none;
-  padding: 0;
-  margin: 0 0 0 -0.5rem;
-}
-footer .listfooterMenu li {
-  margin: 0.7rem;
-}
-footer .listfooterMenu li a {
-  color: #fff;
-  text-decoration: none;
-}
-footer .listfooterMenu li a:hover {
-  color: #a7a7a6;
-}
-footer .suscribeFieldContainer {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-}
-footer .suscribeFieldContainer input[type="text"] {
-  border: 0;
-  padding: 0.7rem;
-  -webkit-border-radius: 5px 0 0 5px;
-          border-radius: 5px 0 0 5px;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 0 auto;
-      -ms-flex: 1 0 auto;
-          flex: 1 0 auto;
-}
-footer .suscribeFieldContainer input[type="submit"] {
-  background: #20a599;
-  border: 0;
-  -webkit-border-radius: 0 5px 5px 0;
-          border-radius: 0 5px 5px 0;
-  color: #fff;
-  padding: 0.7rem;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 1 auto;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
-  margin: 0;
-}
-.credits {
-  padding: 1rem 0 1rem 0;
-}
-.credits .creditsContainer {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: end;
-  -webkit-align-items: flex-end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-}
-.credits .creditsContainer .socialLinks {
-  font-size: 2rem;
-}
-.credits .creditsContainer .socialLinks i {
-  color: #a7a7a6;
-  padding: 0.5rem;
-}
-.credits .creditsContainer .socialLinks i:hover {
-  color: #20a599;
-}
+html{font-size:16px}body{font-family:Roboto,sans-serif}::-moz-selection{background:#ff0}::selection{background:#ff0}.welcome{background:url(../images/bgFront.jpg) no-repeat top;-webkit-background-size:cover;background-size:cover;color:#fff;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;height:100vh}.welcome .welcome-text{-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-flex:1;-webkit-flex:1 1 auto;-ms-flex:1 1 auto;flex:1 1 auto}.welcome .welcome-text .display-4{font-size:4rem}.welcome .welcome-text p{font-size:1.5rem}.welcome .banner{color:#fff;padding:1rem 0}.welcome .banner .container{-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap}.welcome .banner .container .logo img{width:175px}.welcome .btnMenu,.welcome .btnSearch{background:transparent;border:0;color:#fff;font-size:2rem;margin:0;padding:0 .5rem}.welcome .btnMenu:focus,.welcome .btnSearch:focus{outline:0}.welcome .btnSearch{margin-left:auto;margin-right:.8rem}.welcome #blockSearch{-webkit-box-flex:1;-webkit-flex:1 1 100%;-ms-flex:1 1 100%;flex:1 1 100%}.welcome .blockSearchContainer{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;height:3rem;margin:1rem 0}.welcome .blockSearchContainer input[type=text]{border:0;-webkit-border-radius:5px 0 0 5px;border-radius:5px 0 0 5px;padding:1rem}.welcome .blockSearchContainer input[type=submit]{background:#20a599;border:0;-webkit-border-radius:0 5px 5px 0;border-radius:0 5px 5px 0;color:#fff;-webkit-box-flex:1;-webkit-flex:1 1 auto;-ms-flex:1 1 auto;flex:1 1 auto}.welcome nav#mainMenuContainer{-webkit-box-flex:1;-webkit-flex:1 1 100%;-ms-flex:1 1 100%;flex:1 1 100%}.welcome nav#mainMenuContainer ul{list-style:none;margin:1rem 0 0;padding:0}.welcome nav#mainMenuContainer ul a{border-top:1px solid #a7a7a6;color:#eeeeef;display:block;padding:.8rem 0;text-align:center;text-decoration:none}.welcome nav#mainMenuContainer ul a:hover,.welcome nav#mainMenuContainer ul li.active a{color:#20a599}.btn{border:0;color:#fff;-webkit-transition:all .5s ease;-o-transition:all .5s ease;transition:all .5s ease}.btnAzul{background:#1bb7d0}.btnAzul:hover{background:#158fa3;color:#eeeeef}.btnVerdeMenta{background:#20a599}.btnVerdeMenta:hover{background:#187a71;color:#eeeeef}.services{margin-bottom:1rem}.services .wedo{padding:1.5rem}.services .wedo .servicio{margin:1rem}.services .wedo .servicio img{max-width:40%}.workflow{background:#222c37;color:#fff;text-align:center;padding:1.5rem}.workflow .container-fluid{padding:5rem}.workflow .container-fluid p{font-size:1.5rem}section.latestWorks{background:#eeeeef;padding:1.5rem}section.latestWorks h1{padding:1rem}section.latestWorks a{text-decoration:none}section.latestWorks a h4{font-size:1.5rem;font-weight:700;text-align:center;padding-top:1rem;color:#2b2b2b}section.latestWorks .container{padding-left:0;padding-right:0}section.latestWorks .owl-nav{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;margin:.3rem 0}section.latestWorks .owl-next,section.latestWorks .owl-prev{font-size:3rem;margin:0 .5rem;color:#2b2b2b;-webkit-transition:all .2s ease;-o-transition:all .2s ease;transition:all .2s ease}section.latestWorks .owl-next:hover,section.latestWorks .owl-prev:hover{color:#a7a7a6}.blog__contact .container h2.headBlogContact{border-bottom:1px solid #a7a7a6;padding:1rem}.blog__contact .container a{text-decoration:none;color:#2b2b2b}.blog__contact .container a article{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;margin-bottom:1rem;-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center;-webkit-align-content:center;-ms-flex-line-pack:center;align-content:center}.blog__contact .container a article .detailPost{margin-left:1rem}.blog__contact .container a article .detailPost .dateBlog{font-weight:700}footer{background:#222c37;padding:1rem;color:#fff}footer img{max-width:30%;margin:1rem 0}footer .listfooterMenu{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;list-style:none;padding:0;margin:0 0 0 -.5rem}footer .listfooterMenu li{margin:.7rem}footer .listfooterMenu li a{color:#fff;text-decoration:none}footer .listfooterMenu li a:hover{color:#a7a7a6}footer .suscribeFieldContainer{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex}footer .suscribeFieldContainer input[type=text]{border:0;padding:.7rem;-webkit-border-radius:5px 0 0 5px;border-radius:5px 0 0 5px;-webkit-box-flex:1;-webkit-flex:1 0 auto;-ms-flex:1 0 auto;flex:1 0 auto}footer .suscribeFieldContainer input[type=submit]{background:#20a599;border:0;-webkit-border-radius:0 5px 5px 0;border-radius:0 5px 5px 0;color:#fff;padding:.7rem;-webkit-box-flex:1;-webkit-flex:1 1 auto;-ms-flex:1 1 auto;flex:1 1 auto;margin:0}.credits{padding:1rem 0}.credits .creditsContainer{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between;-webkit-box-align:end;-webkit-align-items:flex-end;-ms-flex-align:end;align-items:flex-end}.credits .creditsContainer .socialLinks{font-size:2rem}.credits .creditsContainer .socialLinks i{color:#a7a7a6;padding:.5rem}.credits .creditsContainer .socialLinks i:hover{color:#20a599}
