--- a/app/css/includes/workflow.css
+++ b/app/css/includes/workflow.css
@@ -1,10 +1,1 @@
-.workflow {
-  background: #222c37;
-  color: #fff;
-  padding: 1rem;
-  text-align: center;
-}
-.workflow img {
-  margin-bottom: 0.5rem;
-  max-width: 60px;
-}
+.workflow{background:#222c37;color:#fff;text-align:center;padding:1.5rem}.workflow .container-fluid{padding:5rem}.workflow .container-fluid p{font-size:1.5rem}
