--- a/pug/includes/loquehacemos.pug
+++ b/pug/includes/loquehacemos.pug
@@ -6,22 +6,22 @@ section.services
             p Creamos productos enfocados en mejorar y aumentar la productividad de cada proyecto.
 
             .row
-                .col-xs-12
+                .col-xs-12.col-md-4
                     .servicio
                         img(src="images/service_1.svg", alt="")
                         h2.font-weight-bold Software a la medida
                         p Desarrollamos software y aplicaciones web de acuerdo a las necesidades de cada empresa o negocio personal. Usamos las últimas tecnologías de punta en el desarrollo de cada solución.
-                .col-xs-12
+                .col-xs-12.col-md-4
                     .servicio
                         img(src="images/service_2.svg", alt="")
                         h2.font-weight-bold Diseño Web
                         p Creamos sitios web autoadministrables, interactivos, con diseños personalizados y adaptables a cualquier dispositivo.
-                .col-xs-12
+                .col-xs-12.col-md-4
                     .servicio
                         img(src="images/service_3.svg", alt="")
                         h2.font-weight-bold Consultoría IT
                         p Capacitamos y damos formación en diferentes tecnologías, área de sistemas, desarrollo y seguridad informática.
             
             .row
-                .col-xs-12
+                .col-xs-12.col-md-4.offset-md-4
                     a(href="#").btn.btn-block.btn-secondary.btnAzul Conocer más
