--- a/pug/index.pug
+++ b/pug/index.pug
@@ -8,8 +8,14 @@ head
     //Bootstrap
     link(rel="stylesheet", href="css/bootstrap.min.css")
 
+    //Bootstrap CDN
+    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css")
+
     //Font Awesome
     link(rel="stylesheet", href="css/font-awesome.min.css")
+
+    //Animate
+    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css")
 
     //Carousel
     link(rel="stylesheet", href="css/owl.carousel.min.css")
