--- a/stylus/includes/header.styl
+++ b/stylus/includes/header.styl
@@ -13,6 +13,12 @@
         display flex
         flex 1 1 auto
 
+        .display-4
+                font-size 4rem
+        p
+            font-size 1.5rem
+
+
     .banner
         //background azulOscuroBG //Para quitar el fondo
         color #fff
@@ -21,7 +27,7 @@
         .container
             align-items center
             display flex
-            flex-wrap wrap
+            flex-wrap wrap            
 
             .logo
                 img
