--- a/stylus/includes/workflow.styl
+++ b/stylus/includes/workflow.styl
@@ -3,9 +3,11 @@
 .workflow
     background azulOscuroBG
     color #fff
-    padding 1rem
     text-align center
+    padding 1.5rem
 
-    img
-        margin-bottom .5rem
-        max-width 60px
+    .container-fluid
+        padding 5rem
+
+        p
+            font-size 1.5rem
